# rust-lol-stocks-bot

./: .env.example  Cargo.toml  README.md
discord_bot/: Cargo.toml
docs/: bot_commands.md  matches_example.json  pi_setup.md  teams_db_seed.json  web_server_endpoints.md
graph_builder/: Cargo.toml
graph_builder/src/: lib.rs
lol_stocks_core/: Cargo.toml
lol_stocks_core/migrations/2021-06-01-152959_create_users/: up.sql
lol_stocks_core/migrations/2021-06-01-153424_create_portfolio/: up.sql
lol_stocks_core/migrations/2021-06-01-164512_make_names_unique/: down.sql  up.sql
lol_stocks_core/migrations/2021-06-04-095203_create_lock/: down.sql
lol_stocks_core/migrations/2021-06-08-232509_add_admin_to_user/: down.sql  up.sql
lol_stocks_core/migrations/2021-06-10-140705_add_history/: down.sql  up.sql
lol_stocks_core/migrations/2021-06-28-101821_add_league_to_team/: down.sql  up.sql
lol_stocks_core/migrations/2021-06-28-120900_make_league_non_nullable/: down.sql  up.sql
lol_stocks_core/migrations/2022-01-07-102012_add_discord_id_to_user/: down.sql  up.sql
lol_stocks_core/migrations/2022-04-11-140803_add_alias_to_user/: down.sql  up.sql
lol_stocks_core/migrations/2022-04-11-141135_make_alias_unique/: down.sql  up.sql
lol_stocks_core/migrations/2022-04-27-143830_make_discord_id_unique/: down.sql  up.sql
lol_stocks_core/src/: elo.rs  histories.rs  lib.rs  portfolio_calculations.rs  schema.rs  seed.rs
lol_stocks_core/src/database/: connection.rs  leagues.rs  locks.rs  migrations.rs  mod.rs  portfolios.rs  team_elo_histories.rs  teams.rs  user_portfolio_histories.rs  users.rs
lol_stocks_core/src/errors/: mod.rs
lol_stocks_core/src/models/: holding.rs  leaderboard_entry.rs  league.rs  lock.rs  mod.rs  portfolio.rs  team.rs  team_elo_history.rs  user.rs  user_portfolio_history.rs
lol_stocks_discord_bot/: Cargo.toml
lol_stocks_discord_bot/src/: main.rs
lol_stocks_discord_bot/src/commands/: buy.rs  buy_all.rs  db_lock.rs  elo_history_for.rs  help.rs  leaderboard.rs  leaderboard_graph.rs  market.rs  market_cap.rs  market_lock.rs  mod.rs  ping.rs  portfolio.rs  portfolio_graph.rs  portfolio_history.rs  portfolio_history_graph.rs  portfolio_performance.rs  record_match.rs  register.rs  sale_unlock.rs  schedule.rs  sell.rs  sell_all.rs  suggest.rs  suggest_affordable.rs  team_graph.rs  team_history.rs  team_history_graph.rs  update_alias.rs  view_market.rs  view_portfolio.rs  weekly_report.rs
lol_stocks_discord_bot/src/helpers/: messages.rs  mod.rs  parse_args.rs  player_bot.rs  plus_sign.rs  portfolio_view.rs  send_error.rs  user_graph_data.rs
lol_stocks_web_server/: Cargo.toml  build.rs
lol_stocks_web_server/src/: main.rs
lol_stocks_web_server/src/endpoints/: index.rs  make_admin.rs  mod.rs  padlock.rs  register_games.rs  register_match.rs  register_teams.rs  take_team_snapshot.rs  teams.rs
lol_stocks_web_server/src/models/: app_data.rs  game.rs  key.rs  mod.rs  team.rs  user.rs
lol_stocks_web_server/templates/: base.html  index.html
migrations/2021-05-28-114956_create_teams/: down.sql  up.sql
migrations/2021-06-01-153424_create_portfolio/: down.sql
migrations/2021-06-04-095203_create_lock/: up.sql
src/: main.rs  schema.rs
src/commands/: buy.rs  help.rs  mod.rs  record_match.rs  register.rs  sale_lock.rs  sale_unlock.rs  sell.rs  view_market.rs  view_portfolio.rs
src/database/: connection.rs  locks.rs  mod.rs  portfolios.rs  teams.rs  users.rs
src/elo/: elo.rs
src/file_io/: data.rs  (+4 more)
(+15 files in other folders)
