[package]
name = "lol_stocks_core"
version = "1.1.1"
authors = ["Kelvin Samuel <kelvin@kks110.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.4", features = ["postgres", "chrono"] }
diesel_migrations = "1.4.0"
chrono = "0.4"
