[package]
name = "lol_stocks_web_server"
version = "1.0.0"
authors = ["Kelvin Samuel <kelvin@kks110.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lol_stocks_core = { path = "../lol_stocks_core" }
actix-web = "3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"